basic album functionality

--- a/Facebook/GroupBy.csproj
+++ b/Facebook/GroupBy.csproj
@@ -250,11 +250,12 @@
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Profile\Edit.cshtml" />
     <Content Include="Views\Profile\Delete.cshtml" />
+    <Content Include="Views\Album\Index.cshtml" />
+    <Content Include="Views\Album\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\Images\" />
-    <Folder Include="Views\Album\" />
     <Folder Include="Views\Comment\" />
     <Folder Include="Views\Group\" />
     <Folder Include="Views\Message\" />
