--- a/Facebook/GroupBy.csproj
+++ b/Facebook/GroupBy.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Message.cs" />
     <Compile Include="Models\Photo.cs" />
+    <Compile Include="Models\PhotoWithComments.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
