--- a/Facebook/GroupBy.csproj
+++ b/Facebook/GroupBy.csproj
@@ -256,6 +256,7 @@
     <Content Include="Views\Photo\Index.cshtml" />
     <Content Include="Views\Photo\New.cshtml" />
     <Content Include="Views\Photo\Show.cshtml" />
+    <Content Include="Views\Album\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
