--- a/Facebook/GroupBy.csproj
+++ b/Facebook/GroupBy.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AlbumController.cs" />
     <Compile Include="Controllers\CommentController.cs" />
+    <Compile Include="Controllers\FriendsController.cs" />
     <Compile Include="Controllers\GroupController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -183,6 +184,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Album.cs" />
     <Compile Include="Models\Comment.cs" />
+    <Compile Include="Models\Friends.cs" />
     <Compile Include="Models\Group.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -260,6 +262,8 @@
     <Content Include="Views\Profile\Edit.cshtml" />
     <Content Include="Views\Search\Search.cshtml" />
     <Content Include="Views\Album\Edit.cshtml" />
+    <Content Include="Views\Friends\ShowFriendRequests.cshtml" />
+    <Content Include="Views\Friends\ShowFriends.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
